k8_deploy_aws_app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: app2-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2-app
  template:
    metadata:
      labels:
        app: app2-app
    spec:
      containers:
        - name: app2-container
          image: rgupta87/myapp2:latest
          ports:
            - containerPort: 5001
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: app2-app-svc
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /healthCheck
spec:
  type: NodePort
  selector:
    app: app2-app
  ports:
    - port: 5001
      targetPort: 5001
